--- a/query.css
+++ b/query.css
@@ -1,10 +1,52 @@
 @media only screen and (max-width: 768px) {
+	.navbar-brand{
+		font-size: 1.85em;
+	}
 	.nav_e{
 	display: none;
 	}
 	.nav_c{
 		display: block;
 	}
+	
+  .home_centre{
+		font-size: 3em;
+	}
+	.con_i2q{
+	display:block;
+	}
+	.con_i2{
+	display:block;
+	}
+	.con_iq{
+	display:block;
+	}
+	.con_i{
+	display:block;
+	}
+}
 
+@media only screen and (max-width: 425px) {
+	.navbar-brand{
+		font-size: 1.7em;
+	}
+	.fa-bars{
+		font-size: 1.3em;
+	}
+	.navbar{
+		padding: 0.5em 2em;
+	}
+	footer{
+		margin-top: 8%;
+	}
+}
 
+@media only screen and (max-width: 1024px) {
+	.home_centre{
+		font-size: 4em;
+	}
+	.carousel-inner img {
+		width: auto;
+      height: 100%;
+  }
 }
