--- a/query.css
+++ b/query.css
@@ -23,7 +23,11 @@
 		font-size: 1em;
 	}
 }
-
+@media only screen and (max-width: 580px) {
+	.pdt_demo_img{
+	display:inline-block;
+}
+}
 @media only screen and (max-width: 425px) {
 	.navbar-brand{
 		font-size: 1.7em;
